SVN Update# 3681 by ntoskrnl: XFileSharing - improved CaptchaRecognizer a bit